<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="isLoading" type="boolean" />
        <variable name="currency" type="String"/>
        <variable name="amount" type="double"/>
        <variable name="hotelViewModel" type="com.ccortez.desafiohurbapplication.viewmodel.HotelViewModel"/>
    </data>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:scrollbars = "vertical"
        android:scrollbarStyle="insideInset"
        >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/loading_hotel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/loading_hotel"
            android:textAlignment="center"
            app:visibleGone="@{isLoading}"/>

        <LinearLayout
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="200dp">
                <com.veinhorn.scrollgalleryview.ScrollGalleryView
                    android:id="@+id/scroll_gallery_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#000"/>
            </LinearLayout>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hotel_name"
                android:textStyle="bold"
                android:textSize="@dimen/hotel_header1"
                android:text="@{hotelViewModel.hotel.name}"
                android:textAlignment="center"
                android:paddingBottom="5dp"/>

            <TextView
                android:id="@+id/hotel_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hotel_description"
                android:textSize="@dimen/hotel_text2"
                android:text="@{hotelViewModel.hotel.description}"/>


            <TextView
                android:id="@+id/hotel_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:contentDescription="@string/hotel_price"
                android:textSize="@dimen/hotel_text2"
                android:text="@string/hotel_price"
                />

            <TextView
                android:id="@+id/hotel_price2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hotel_price"
                android:textSize="@dimen/hotel_text2"
                app:amount="@{amount}"
                app:currency="@{currency}"
                android:text="@{String.valueOf(hotelViewModel.hotel.price.amount)}"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:layout_gravity="center_vertical">
                <ImageView
                    android:id="@+id/hotel_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    </ScrollView>
</layout>